# topaz

./: CMakeLists.txt  Doxyfile.in  LICENSE
include/topaz/: buffer.h  debug.h  defs.h  discovery.h  errno.h  features.h  security.h  swg_core.h  syntax.h  topaz.h  tpm.h  transport_ata.h  uid_enterprise.h  uid_opal.h  uid_swg.h
misc/errno_gen/: errno_gen.py  errno_input.txt
src/: CMakeLists.txt
src/test/: CMakeLists.txt  unit_test.c
src/tools/: CMakeLists.txt  test.c
src/topaz/: CMakeLists.txt  buffer.c  debug.c  discovery.c  errno.c  security.c  swg_core.c  syntax.c  topaz.c  tpm.c  transport_ata.c  transport_ata_sgio.c
